samples/_failures_safe/1761530212_c3ddac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7de7c651.c: In function ‘main’:
./samples/SAFE/__tmp_7de7c651.c:136:5: error: expected declaration or statement at end of input
  136 |     printf("Enter input data (max 1024 bytes): ");
      |     ^~~~~~
